--- a/index.html
+++ b/index.html
@@ -1449,6 +1449,7 @@ body.edit-mode .delete-btn{
       stats: document.getElementById('page-stats'),
       budget: document.getElementById('page-budget'), // ✅ 추가
       monthly: document.getElementById('page-monthly'),
+      review: document.getElementById('page-review'),
     };
     const fab = document.getElementById('fab');
 
