--- a/index.html
+++ b/index.html
@@ -1101,12 +1101,14 @@ body.edit-mode .delete-btn{
     .page{ display:none; }
     .page.active{ display:block; }
 
-
-    #reviewCard .hint{
+    #page-review .hint{
   font-size: 12px;
-  opacity: .75;
-  margin-top: 14px;
+  line-height: 1.45;
+  color: rgba(102,102,102,.75);
+  letter-spacing: -0.2px;
 }
+
+ 
 
     
   </style>
