--- a/index.html
+++ b/index.html
@@ -1101,21 +1101,12 @@ body.edit-mode .delete-btn{
     .page{ display:none; }
     .page.active{ display:block; }
 
-    #page-review .hint1{
+    #page-review .hint{
   font-size: 12px;
   line-height: 1.45;
   color: rgba(102,102,102,.75);
   letter-spacing: -0.2px;
       padding-bottom: 15px;
-}
-
- #page-review .hint2{
-  font-size: 12px;
-  line-height: 1.45;
-  color: rgba(102,102,102,.75);
-  letter-spacing: -0.2px;
-   padding-top: 15px;
-   padding-bototm: 40px;
 }
 
     
@@ -1318,7 +1309,7 @@ body.edit-mode .delete-btn{
   <div class="card">
     <h2>이번 달 정리</h2>
 
-    <p class="hint1">
+    <p class="hint">
       숫자 말고, 느낌을 한 줄로 남겨도 돼.
     </p>
 
@@ -1332,7 +1323,7 @@ body.edit-mode .delete-btn{
       <button class="action-btn" id="saveReview">저장</button>
     </div>
 
-    <p class="hint2">
+    <p class="hint">
       * 이 정리는 이 기기에만 저장돼.
     </p>
   </div>
