--- a/index.html
+++ b/index.html
@@ -1106,8 +1106,17 @@ body.edit-mode .delete-btn{
 #page-review .review-actions{
   margin-top: 6px; /* 12px의 절반 */
 }
+
+    #page-review .review-actions button{
+  margin-top:0 !important;
+}
     
-    
+/* 정리 탭: 카드 하부 여백 확보 */
+#page-review{
+  padding-bottom: 30px; /* 요청한 만큼 */
+}
+
+
 
     /* 정리 탭 전용 힌트: 예산 힌트(.hint)와 분리 */
 #page-review .review-hint{
