--- a/index.html
+++ b/index.html
@@ -1132,6 +1132,10 @@ body.edit-mode .delete-btn{
   margin-bottom: 8px;  /* 추천: 6~10px 사이 */
 }
 
+    #page-review .card{
+      padding-bottom: 30px;
+    }
+
     
   </style>
 </head>
