--- a/index.html
+++ b/index.html
@@ -1557,6 +1557,11 @@ if (target === "monthly") {
   renderMonthly(s?.value || currentYM());  // ✅ 무조건 한 번 렌더
   }
 
+
+  if (target === "review") {
+  loadReview();
+  }
+
 }
 
     
