--- a/index.html
+++ b/index.html
@@ -1103,6 +1103,27 @@ body.edit-mode .delete-btn{
 
 
 
+    /* 통계 TOP5 하이라이트 */
+#statsTop5 .bar-row.dim{
+  opacity: .35;
+  filter: grayscale(.2);
+}
+
+#statsTop5 .bar-row.active{
+  opacity: 1;
+}
+
+#statsTop5 .bar-row.active .bar-fill{
+  transform: scaleY(1.08);
+  transform-origin: center;
+}
+
+#statsTop5 .bar-row.active .bar-name{
+  font-weight: 800;
+}
+
+    
+
    
     
   </style>
@@ -2236,6 +2257,24 @@ function renderStats(){
       }
     };
   }
+
+  // ✅ TOP5 막대 하이라이트
+    if(top5El){
+      const rows = top5El.querySelectorAll(".bar-row");
+      rows.forEach(r => r.classList.remove("active", "dim"));
+
+      // 클릭한 카테고리만 active, 나머지는 dim
+      rows.forEach(r => {
+        if(r.dataset.cat === name) r.classList.add("active");
+        else r.classList.add("dim");
+      });
+
+      // 선택된 row가 화면 밖이면 살짝 스크롤(선택)
+      const active = top5El.querySelector('.bar-row.active');
+      active?.scrollIntoView({ block:"nearest", behavior:"smooth" });
+    }
+
+  
   
   if(totalEl) totalEl.textContent = fmtKRW(total);
 
@@ -2260,19 +2299,19 @@ function renderStats(){
     const maxVal = Math.max(...onlyTop5.map(([,v])=> v), 1);
 
     top5El.innerHTML = onlyTop5.map(([name, val], i)=>{
-      const pct = Math.round((val / total) * 100);
-      const w = Math.round((val / maxVal) * 100);
+  const pct = Math.round((val / total) * 100);
+  const w = Math.round((val / maxVal) * 100);
 
-      return `
-        <div class="bar-row">
-          <div class="bar-name">${name}</div>
-          <div class="bar-track">
-            <div class="bar-fill" style="width:${w}%; background:${DONUT_COLORS[i] || "#9AA3AF"};"></div>
-          </div>
-          <div class="bar-amt">${fmtKRW(val)}<span class="hint" style="margin-left:6px;">${pct}%</span></div>
-        </div>
-      `;
-    }).join("");
+  return `
+    <div class="bar-row" data-cat="${name}">
+      <div class="bar-name">${name}</div>
+      <div class="bar-track">
+        <div class="bar-fill" style="width:${w}%; background:${DONUT_COLORS[i] || "#9AA3AF"};"></div>
+      </div>
+      <div class="bar-amt">${fmtKRW(val)}<span class="hint" style="margin-left:6px;">${pct}%</span></div>
+    </div>
+  `;
+}).join("");
   }
 }
 
