--- a/index.html
+++ b/index.html
@@ -1476,11 +1476,11 @@ console.log("JS START");
     // 탭 전환
     const tabs = document.querySelectorAll('.tab');
     const pages = {
-  : document.getElementById("page-home"),
-  stats: document.getElementById("page-stats"),
-  budget: document.getElementById("page-budget"),
-  monthly: document.getElementById("page-monthly"),
-};
+      home: document.getElementById("page-home"),
+      stats: document.getElementById("page-stats"),
+      budget: document.getElementById("page-budget"),
+      monthly: document.getElementById("page-monthly"),
+    };
     
     const fab = document.getElementById('fab');
 
