--- a/index.html
+++ b/index.html
@@ -1148,7 +1148,7 @@ body.edit-mode .delete-btn{
 }
 
 .month-dot.filled{
-  background: #B7B3C6;     /* ✅ Muted Lavender Gray */
+  background: #E3D2A6;     /* ✅ Soft Oat, Wheat */
 }
     
     
