--- a/index.html
+++ b/index.html
@@ -1148,7 +1148,7 @@ body.edit-mode .delete-btn{
 }
 
 .month-dot.filled{
-  background: #8B0A4;     /* ✅ Warm Taupe, Mushroom */
+  background: #B9B2A7;     /* ✅ Warm Taupe, Mushroom */
 }
     
     
