--- a/index.html
+++ b/index.html
@@ -1144,11 +1144,11 @@ body.edit-mode .delete-btn{
   max-width: 10px;         /* 너무 커지지 않게 */
   justify-self: center;    /* 칸 중앙 */
   border-radius: 999px;
-  background: rgba(0,0,0,.10); /* 빈 도트 */
+  background: #E9E6E1; /* 빈 도트 */
 }
 
 .month-dot.filled{
-  background: #C9C3BA;     /* ✅ Warm Taupe, Mushroom */
+  background: #C6C0B6;     /* ✅ Airy Taupe, Mushroom */
 }
     
     
