--- a/index.html
+++ b/index.html
@@ -1144,7 +1144,7 @@ body.edit-mode .delete-btn{
   max-width: 10px;         /* 너무 커지지 않게 */
   justify-self: center;    /* 칸 중앙 */
   border-radius: 999px;
-  background: #E9E6E1; /* 빈 도트 */
+  background: rgba(180,175,165,.22);
 }
 
 .month-dot.filled{
