--- a/index.html
+++ b/index.html
@@ -1136,6 +1136,7 @@ body.edit-mode .delete-btn{
   gap: 4px;                /* 6 → 4 줄임 */
   margin-top: 8px;         /* 12 → 8 줄임 */
   align-items: center;
+  margin-bottom: 5px;
 }
 
 .month-dot{
