--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       color:var(--text);
       font-family:-apple-system,BlinkMacSystemFont,"Apple SD Gothic Neo","Noto Sans KR",Segoe UI,Roboto,Helvetica,Arial,sans-serif;
       -webkit-font-smoothing:antialiased;
-      padding-bottom: calc(72px + env(safe-area-inset-bottom));
+      padding-bottom: calc(76px + env(safe-area-inset-bottom));
     }
 
     /* 상단 헤더 */
@@ -99,18 +99,23 @@
     }
 
    
-    /* 하단 탭바 */
-    .tabbar{
-     position:fixed; left:0; right:0; bottom:0;
-     height:66px;
-     background: rgba(255,255,255,.82);
-     backdrop-filter: blur(14px);
-     border-top:1px solid var(--line);
-     display:flex;
-     padding:8px 10px 10px;
-     z-index:10;
-     margin: 0 !important;
-    }
+   .tabbar{
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  /* ✅ iOS safe-area까지 탭바 배경이 내려가도록 */
+  height: calc(66px + env(safe-area-inset-bottom));
+  padding: 8px 10px calc(10px + env(safe-area-inset-bottom));
+
+  background: rgba(255,255,255,.82);
+  backdrop-filter: blur(14px);
+  border-top: 1px solid var(--line);
+  display: flex;
+  z-index: 10;
+  margin: 0 !important;
+}
     
     .tab{
       flex:1;
