--- a/index.html
+++ b/index.html
@@ -1185,6 +1185,10 @@ body.edit-mode .delete-btn{
   padding-bottom: 64px; /* 48~80 사이에서 취향. 4배 느낌이면 64 추천 */
 }
 
+    /* 데이터 카드: 백업/복구 버튼을 위로 10px 당김 */
+#dataToolsCard .actions{
+  margin-top: -10px !important;
+}
     
     
   </style>
