--- a/index.html
+++ b/index.html
@@ -708,20 +708,21 @@ body.edit-mode .delete-btn{
   font-weight: 800;
   letter-spacing: -0.3px;
 }
-
-    
 /* ===== 통계(도넛/막대) ===== */
 
-/* ✅ TOP5 막대: 막대 길이 줄이고, 금액은 절대 줄바꿈 안 나게 */
-.bar-row{
+/* ✅ TOP5 막대: 통계 탭에만 적용 (다른 막대에 영향 X) */
+#statsTop5 .bar-row{
   display:flex;
   align-items:center;
-  gap:8px;            /* 기존 10px → 조금 조이기 */
+  gap:8px;
   margin:10px 0;
 }
 
-.bar-name{
-  width:64px;         /* 기존 72px → 조금 줄여서 오른쪽 공간 확보 */
+/* ✅ 카테고리명: 최소폭 확보 + 한 줄 + ... */
+#statsTop5 .bar-name{
+  flex: 0 0 72px;          /* ← 이름 영역 확보 (64~90 조절) */
+  min-width: 72px;
+  max-width: 96px;
   font-size:13px;
   color:var(--muted);
   letter-spacing:-0.2px;
@@ -730,38 +731,37 @@ body.edit-mode .delete-btn{
   text-overflow:ellipsis;
 }
 
-/* 🔥 핵심: 막대 길이를 고정폭으로 줄이기 */
-.bar-track{
-  flex: 0 0 160px;    /* 기존 flex:1 → 막대가 너무 길어지는 문제 해결 */
+/* ✅ 막대: 너가 원한 고정 길이 유지 */
+#statsTop5 .bar-track{
+  flex: 0 0 150px;         /* ← 160도 OK, 아이폰에서 숫자 깨지면 140~155 추천 */
   height:10px;
   border-radius:999px;
   background: rgba(0,0,0,.06);
   overflow:hidden;
 }
 
-.bar-fill{
+#statsTop5 .bar-fill{
   height:100%;
   border-radius:999px;
   width:0%;
   filter: saturate(.9) brightness(1.02);
 }
 
-/* 🔥 핵심: 금액 영역을 넓히고, 줄바꿈 금지 */
-.bar-amt{
-  flex: 1 1 auto;     /* 남은 공간은 금액이 먹게 */
-  min-width: 118px;   /* 6~7자리 금액 + '원' 안정권 */
+/* ✅ 금액: 절대 줄바꿈 금지 + 숫자 영역 넉넉히 */
+#statsTop5 .bar-amt{
+  flex: 1 1 auto;
+  min-width: 132px;        /* ← “1,000,000원 33%”급도 버티게 */
   text-align:right;
   font-size:13px;
-  letter-spacing: -0.4px;
+  letter-spacing:-0.4px;
   color:var(--text);
-  white-space: nowrap;           /* ✅ 두 줄 금지 */
+  white-space:nowrap;
   font-variant-numeric: tabular-nums;
 }
 
-.bar-amt .hint{
-  white-space: nowrap; /* %도 같이 줄바꿈 금지 */
+#statsTop5 .bar-amt .hint{
+  white-space:nowrap;
 }
-
     
 /* ✅ 통계 탭: 페이드 + 4px 미세 이동 */
 #statsDonutWrap.anim-in,
