--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     --radius:16px;
 
-    --tabbar-h: 100px;          /* 네가 쓰는 탭바 기본 높이 */
+    --tabbar-h: 84px;          /* 네가 쓰는 탭바 기본 높이 */
     --fab-gap: 20px;           /* 탭바 위로 띄울 여유 */
       
     /* NEW: surfaces used by header/tabbar/modal */
@@ -109,9 +109,8 @@
   right: 0;
   bottom: 0;
 
-  height: 84px    /* iPhone 11 Pro 기준 */;
-  padding-bottom: 20px;   /* 홈 인디게이터 숨 쉴 공간 */
-
+  height: var(--tabbar-h);
+  padding-bottom: env(safe-area-inset-bottom);
   box-sizing: border-box;
      
   background: rgba(255,255,255,.92);
@@ -1127,8 +1126,8 @@ body.edit-mode .delete-btn{
 
      /* 탭 페이지 */
     .page{ display:none; 
-           padding-bottom: calc(var(--tabbar-h) + env(safe-area-inset-bottom) + 14px);
-         }
+          padding-bottom: calc(var(--tabbar-h) + env(safe-area-inset-bottom) + 12px);
+    }
     .page.active{ display:block; }
 
 
