--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   right: 0;
   bottom: 0;
 
-  height: var(--tabbar-h);
+  height: 84px;
   padding-bottom: env(safe-area-inset-bottom);
   box-sizing: border-box;
      
@@ -1126,8 +1126,8 @@ body.edit-mode .delete-btn{
 
      /* 탭 페이지 */
     .page{ display:none; 
-          padding-bottom: calc(var(--tabbar-h) + env(safe-area-inset-bottom) + 12px);
-    }
+  padding-bottom: calc(84px + env(safe-area-inset-bottom));
+}
     .page.active{ display:block; }
 
 
