--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
   display: flex;
   align-items: stretch;
   justify-content: stretch;
+  z-index: 9999;
 }
 
 
@@ -1227,11 +1228,7 @@ body.edit-mode .delete-btn{
 }
 
 
-    /* ✅ 모달 열릴 때 탭바 숨김 (버튼 가림 방지) */
-body.modal-open .tabbar{
-  display:none !important;
-}
-    
+        
   </style>
 </head>
 
