--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   justify-content: space-around;
   align-items: center;
 
-  z-index: 9999;
+  z-index: 700;
 
   /* iOS 버그 방어 */
   transform: translateZ(0);
@@ -1137,7 +1137,7 @@ body.edit-mode .delete-btn{
      /* 탭 페이지 */
   .page{
     display: none;
-    padding-bottom: var(--tabbar-h);
+    padding-bottom: 0;
   }
 
   .page.active{
