--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
       border:1px solid var(--line);
       border-radius:20px 20px 0 0;
       padding:16px;
+      padding-bottom: 60px;
     }
     .sheet h3{margin:0 0 12px}
     .row{display:flex; flex-direction:column; gap:6px; margin-bottom:10px}
